# ECE1724-Rust-Project

./: .gitignore  Cargo.toml  README.md
Authen_and_cli/: .env  Cargo.toml
Authen_and_cli/src/: authentication.rs  cli.rs  main.rs  monitor.rs  setup.sql
src/: behaviour.rs  client.rs  main.rs  mod.rs  node.rs  store_old.rs  utils.rs
src/client/: client.rs  mod.rs
src/hashing/: consistent.rs  mod.rs
src/network/: communication.rs  handling.rs  mod.rs
src/node/: auth.rs
src/storage/: chunking.rs  mod.rs  replication.rs  retrieval.rs
